--- a/Labs/15.1 Exception_1.md
+++ b/Labs/15.1 Exception_1.md
@@ -1,4 +1,22 @@
-# Exception
+# 15.1 Exception
+
+ในการพัฒนาโปรแกรม จะมี error เกิดขึ้นได้ 2 แบบ
+1. Compilation error
+   - การผิดพลาดลักษณะนี้ Compiler จะแจ้งเตือน 
+2. Run time error
+   - การผิดพลาดลักษณะนี้ Compiler จะไม่แจ้งเตือน
+   - จะเกิดการ crashes ของโปรแกรมขณะรัน 
+   - การ crashes ของโปรแกรมเรียกว่าเกิด Exception
+
+- Exceptions จะเกิดเมื่อโปรแกรมของเราทำงานผิดพลาด 
+   - พยายามแปลง invalid string
+   - พยายามเข้าถึงสมาชิกอาเรย์ที่อยู่นอกขอบเขต
+   - พยายามใช้งานตัวแปร reference ที่เป็น null 
+   - …และอีกหลายความพยายาม…
+- ภาษา C# มีกลไกรองรับ เพื่อตรวจจับ exceptions ต่างๆ
+
+
+## 15.1.1 ตัวอย่าง exception 1
 
 ```cs
 namespace ExceptionExample
@@ -18,6 +36,7 @@ namespace ExceptionExample
 }
 ```
 
+## 15.1.2 ตัวอย่าง exception 2
 
 ```cs
 namespace ExceptionExample
@@ -47,7 +66,7 @@ namespace ExceptionExample
 
 
 
-## Catching exception
+## 15.1.3 Catching exception
 
 
 ```cs
@@ -78,7 +97,15 @@ namespace ExceptionExample
 ```
 
 
-## Try-catch-finally
+## 15.1.4 Try-catch-finally
+
+- บางครั้ง เราอาจต้องการให้โปรแกรมเราทำงานอย่างปกติไม่ว่าจะมี exception เกิดขึ้นหรือไม่
+   - การเชื่อมต่อ network ไม่สำเร็จ ต้องทำการยกเลิกการเชื่อมต่อ
+   - การเปิดไฟล์แล้วเขียนไม่สำเร็จ ต้องปิดไฟล์นั้น
+   - ฯลฯ
+- โครงสร้าง try-catch จะมี finally ไว้ให้ทำในสิ่งที่เราต้องการ
+- คำสั่งใน finally จะถูกเรียกเสมอ ไม่ว่าจะเกิด exception หรือไม่
+
 
 ``` cs
 namespace ExceptionExample
