--- a/Labs/15.2 Exception_2.md
+++ b/Labs/15.2 Exception_2.md
@@ -1,6 +1,6 @@
-# Exception
+# 15.2 Exception
 
-## Throw exception
+## 15.2.1 Throw exception
 
 
 ```cs
@@ -28,6 +28,7 @@ namespace ExceptionExample
     }
 }
 ```
+## 15.2.2 Throw exception
 
 ```cs
 using System;
