--- a/Labs/15.1 Exception_1.md
+++ b/Labs/15.1 Exception_1.md
@@ -18,6 +18,8 @@
 
 ## 15.1.1 ตัวอย่าง exception 1
 
+รันโปรแกรมต่อไปนี้ แล้วบันทึกผลการรัน
+
 ```cs
 namespace ExceptionExample
 {
@@ -37,6 +39,8 @@ namespace ExceptionExample
 ```
 
 ## 15.1.2 ตัวอย่าง exception 2
+
+รันโปรแกรมต่อไปนี้ แล้วบันทึกผลการรัน
 
 ```cs
 namespace ExceptionExample
@@ -65,8 +69,9 @@ namespace ExceptionExample
 ```
 
 
-
 ## 15.1.3 Catching exception
+
+รันโปรแกรมต่อไปนี้ แล้วบันทึกผลการรัน
 
 
 ```cs
@@ -105,6 +110,8 @@ namespace ExceptionExample
    - ฯลฯ
 - โครงสร้าง try-catch จะมี finally ไว้ให้ทำในสิ่งที่เราต้องการ
 - คำสั่งใน finally จะถูกเรียกเสมอ ไม่ว่าจะเกิด exception หรือไม่
+
+รันโปรแกรมต่อไปนี้ แล้วบันทึกผลการรัน
 
 
 ``` cs
