--- a/Labs/15.2 Exception_2.md
+++ b/Labs/15.2 Exception_2.md
@@ -2,6 +2,8 @@
 
 ## 15.2.1 Throw exception
 
+รันโปรแกรมต่อไปนี้ แล้วบันทึกผลการรัน
+
 
 ```cs
 namespace ExceptionExample
@@ -29,6 +31,8 @@ namespace ExceptionExample
 }
 ```
 ## 15.2.2 Throw exception
+
+รันโปรแกรมต่อไปนี้ แล้วบันทึกผลการรัน
 
 ```cs
 using System;
