--- a/Lab_64030071/15.1 Exception_1.md
+++ b/Lab_64030071/15.1 Exception_1.md
@@ -37,6 +37,7 @@ namespace ExceptionExample
     }
 }
 ```
+![image](https://github.com/RatchanonBusaracome/OOP2565-Week-15/assets/115066405/bca9d238-d88d-4024-9703-d54618eb77de)
 
 ## 15.1.2 ตัวอย่าง exception 2
 
@@ -67,6 +68,7 @@ namespace ExceptionExample
     }
 }
 ```
+![image](https://github.com/RatchanonBusaracome/OOP2565-Week-15/assets/115066405/c3dc3f27-66c6-48ff-9b9d-cbca131305b7)
 
 
 ## 15.1.3 Catching exception
@@ -100,6 +102,7 @@ namespace ExceptionExample
     }
 }
 ```
+![image](https://github.com/RatchanonBusaracome/OOP2565-Week-15/assets/115066405/4e5b4c8e-9ba4-4e2e-ab46-426370a96a8d)
 
 
 ## 15.1.4 Try-catch-finally
@@ -159,7 +162,7 @@ namespace ExceptionExample
     }
 }
 ```
-
+![image](https://github.com/RatchanonBusaracome/OOP2565-Week-15/assets/115066405/80e47857-7f33-453a-871e-b672d77e8b85)
 
 
 
