--- a/Lab_64030071/15.2 Exception_2.md
+++ b/Lab_64030071/15.2 Exception_2.md
@@ -30,6 +30,8 @@ namespace ExceptionExample
     }
 }
 ```
+![image](https://github.com/RatchanonBusaracome/OOP2565-Week-15/assets/115066405/39e6d82b-cb4d-4134-981e-bd047098e64e)
+
 ## 15.2.2 Throw exception
 
 รันโปรแกรมต่อไปนี้ แล้วบันทึกผลการรัน
@@ -78,3 +80,4 @@ namespace Exceptions
     }
 }
 ```
+![image](https://github.com/RatchanonBusaracome/OOP2565-Week-15/assets/115066405/d8f575e4-1b79-4f36-a3a1-3541b8141f29)
